--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 
 [dependencies]
 bamboo_metadata = { path = "../bamboo_metadata" }
-chrono = "0.4.19"
-iso639_enum = "0.1.1"
+chrono = { version = "0.4.0", features = ["serde"] }
+iso639_enum = "0.1"
 isocountry = "0.3.2"
-uuid = "0.8.2"
+serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "0.6", features = ["serde", "v4"] }
