--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ bamboo_metadata = { path = "../bamboo_metadata" }
 chrono = { version = "0.4.0", features = ["serde"] }
 isocountry = "0.3.2"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.64"
 uuid = { version = "0.6", features = ["serde", "v4"] }
